--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "python-json-logger (>=3.3.0,<4.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "sqlalchemy (>=2.0.38,<3.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "pydantic[email] (>=2.11.2,<3.0.0)",
+    "bcrypt (>=4.3.0,<5.0.0)",
 ]
 
 
